# Containers

./: CMakeLists.txt  Makefile  README.md  main.cc  project.py
.github/workflows/: CMakeBuildTest.yml
lib/: CMakeLists.txt  linked_list.cc  linked_list.h  node.h
